other-mpol/add-nodeSelector/.kyverno-test/patchedResource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
  nodeSelector:
    foo: bar
    color: orange
