other-mpol/add-nodeSelector/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-nodeselector
policies:
- ../add-nodeSelector.yaml
resources:
- resource.yaml
- exception-resource.yaml
exceptions:
- exception.yaml
results:
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: add-nodeselector
  resources:
  - default/myapp-pod
  result: pass
  isMutatingPolicy: true
- kind: Pod
  policy: add-nodeselector
  resources: [exception-pod]
  result: skip
  isMutatingPolicy: true
